End of the repairnator process